incorporados los primeros hooks a ser ejecutados

--- a/etc/debian-bastion.conf
+++ b/etc/debian-bastion.conf
@@ -52,9 +52,9 @@ ENABLE_BACKPORTS="yes"
 APT_SECURITY="yes"
 
 # REPOSITORY TYPE (local, remote)
-REPO_TYPE=local
+REPO_TYPE=remote
 # repo URL: file or HREF (ej: http.debian.net)
-REPO_URL=/opt/repo/mirrors
+REPO_URL=http://192.168.0.2/mirrors/debian
 REPO_SECTIONS="main contrib non-free"
 
 # keyring lists
