corrigiendo error en el script que configura APT

--- a/etc/debian-bastion.conf
+++ b/etc/debian-bastion.conf
@@ -54,7 +54,7 @@ APT_SECURITY="yes"
 # REPOSITORY TYPE (local, remote)
 REPO_TYPE=remote
 # repo URL: file or HREF (ej: http.debian.net)
-REPO_URL=http://192.168.0.2/mirrors/debian
+REPO_URL=192.168.0.2/mirrors/debian
 REPO_SECTIONS="main contrib non-free"
 
 # keyring lists
