--- a/etc/debian-bastion.conf
+++ b/etc/debian-bastion.conf
@@ -60,3 +60,8 @@ REPO_SECTIONS="main contrib non-free"
 # keyring lists
 KEYRINGS="debian-keyring debian-archive-keyring debian-ports-archive-keyring"
 
+#### security options
+
+# ports to be open in shorewall
+TCP_PORTS="80,443"
+UDP_PORTS="161"
