agregada configuracion para SELINUX

--- a/etc/debian-bastion.conf
+++ b/etc/debian-bastion.conf
@@ -62,3 +62,5 @@ KEYRINGS="debian-keyring debian-archive-keyring debian-ports-archive-keyring"
 # ports to be open in shorewall
 TCP_PORTS="80,443"
 UDP_PORTS="161"
+
+DISABLE_SELINUX="false"
